--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <section>
+        <div class="cancel">
+            <span>
+                X
+            </span>
+        </div>
         <h1>Hello World!</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eum, eveniet odio id fuga velit esse praesentium molestiae voluptas inventore neque labore dolores? Explicabo esse rerum error veritatis, beatae porro!
